src/styles.css
/*//normalizers*/

* {
  margin:0;
  padding:0;
}

html {
  box-sizing: border-box;
  line-height: 1.15;
  -webkit-text-size-adjust: 100%;
}
*, *:before, *:after {
  box-sizing: inherit;
}

h1 {
  font-size: 2em;
  margin: 0.67em 0;
}

hr {
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}

pre {
  font-family: monospace, monospace;
  font-size: 1em;
}

a {
  background-color: transparent;
}

abbr[title] {
  border-bottom: none;
  text-decoration: underline;
  text-decoration: underline dotted;
}

b, strong {
  font-weight: bolder;
}

code, kbd, samp {
  font-family: monospace, monospace;
  font-size: 1em;
}

sub, sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

sub {
  bottom: -0.25em;
}

sup {
  top: -0.5em;
}

img {
  border-style: none;
}

button, input, optgroup, select, textarea {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
}

button, input {
  overflow: visible;
}

button, select {
  text-transform: none;
}

button::-moz-focus-inner,
[type="button"]::-moz-focus-inner,
[type="reset"]::-moz-focus-inner,
[type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

details {
  display: block;
}

summary {
  display: list-item;
}

/*////////////////////////*/

@media screen and (max-width: 1024px) {
  .announcement p {
    font-size: 13px;
  }
}

@media only screen and (max-width: 2024px) {
  .nav-item {
    padding-bottom: 40px !important;
  }
}

@media only screen and (max-width: 640px) {
  .nav-parent {
    padding: .25em .5em .33em !important;
    border-width: 1px;
  }
}

@media only screen and (max-width: 640px) {
.nav-options:before {
  position: absolute;
  top: 50%;
  right: .5em;
  margin-top: -.45em;
  font-size: 16px;
  width: 16px;
  height: 16px;
  line-height: 16px;
  font-style: normal;
  font-weight: normal;
  -webkit-font-smoothing: antialiased;
  content: "<i class="fas fa-angle-down"></i>";
  text-align: center;
  display: inline-block;
  vertical-align: middle;
  }
}

@media only screen and (max-width: 640px) {
  .nav-options:before {
    position: absolute;
    top: 50%;
    right: .5em;
    margin-top: -.45em;
  }
}

@media only screen and (max-width: 640px) {
  .nav-bar-info {
    border-color: rgba(0,0,0,0);
    border-style: solid;
    position: relative;
    z-index: 100;
  }
}

/*font*/
@import url('https://fonts.googleapis.com/css?family=Tajawal:300');

.body {
  font-size: 17px;
  background-color: white;
}
.container {

}

.announcement-item {
  display:flex;
  align-items: center;
  padding: 10px 50px 10px 50px;
  background-color: #ffd175;
  color:white;
  position: relative;
}

.close-announcements {
  cursor: pointer;
  position: absolute;
  top: 0;
  right: 0;
  width: 2.8em;
  height: 2.78em;
  background: rgba(0,0,0,.15);
  color: #fff;
  display: flex;
  justify-content: center;
}

.close-announcements:after {
  content: '×';
  font-family:sans-serif;
  font-size: 1em;
  font-weight: 100;
  line-height: 2.7em;
  letter-spacing: normal;
  padding: 0;
}

.announcement {
  font-family: 'Tajawal', sans-serif;
  font-weight: 400;
  font-size: 17px;
  font-weight: 300;
  font-style: normal;
  letter-spacing: 1px;
  text-transform: none;
  line-height: inherit;
  width: 100%;
  height: 100%;
}

/*.none {
  display:none;
}*/

.nav-item {
  background-color: white;
  margin: 0 auto;
  display: block;
  position: relative;
  text-align: center;
  width: 100%;
  display: flex;
  justify-content: center;
}

.nav-options {
  display:flex;
  justify-content: space-between;
  flex-direction: row;
  text-transform: uppercase;
  color: #636363;
  padding: 0 .8em;
  font-size: 16px;
  line-height: 1.5em;
  letter-spacing: 2px;
  font-weight: lighter;
  font-family: Futura, sans-serif;
}

#logo {
  height: 260px;
  width: auto;
  margin-bottom: 20px;
}

.content-images {
  margin: 0px 40px;
}

.grid-images {
  display: grid;
  grid-gap: 5px;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  grid-auto-rows: 300px;
  justify-content: center;
  grid-auto-flow: dense;
}

.img-gallery-item img {
  height: 300px;
  width:320px;
}

.img-gallery-item1 {

}

.img-square {

  /*width: 343px;*/
  /*height: 306px;*/
  /*height: 300px;
  width: 300px;*/

}

.img-medium {

  /*width: 383px;*/
  /*height: 383px;*/
  /*height: 300px;
  width: 300px;*/

  /*width:250px;*/
}

.img-wide {

  /*width: 344px;
  height: 257px;*/
  /*height: 300px;

  width: 300px;*/
}

.img-large {

  /*width: 344px;*/
  /*height: 428px;*/
  /*height: 300px;
  width: 300px;*/
}

.footer-item {
  background-color: green;
  width: 100%;
  height: 300px;
}

